--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,15 @@
-<p>Test</p>
+<app-slider></app-slider>
+<div class="blocks">
+	<div class="block">
+		<img src="assets/recyclingMap.svg" alt="Recycling map" class="cover" />
+		<h1>Пункты сбора</h1>
+		<p>Посмотри, где в твоем городе можно сдать вторсырье на переработку</p>
+		<button><img src="assets/arrowRight.svg" /></button>
+	</div>
+	<div class="block">
+		<img src="assets/ecologyMarket.svg" alt="Ecology map" class="cover" />
+		<h1>ЭкоМаркет</h1>
+		<p>Используй заработанные экокоины для покупки товаров из переработанных материалов</p>
+		<button><img src="assets/arrowRight.svg" /></button>
+	</div>
+</div>
