Global font & swiper styles

--- a/src/app/components/ui/header/header.component.html
+++ b/src/app/components/ui/header/header.component.html
@@ -1,7 +1,7 @@
 <header>
 	<div class="container">
 		<div class="logo">
-			<img src="assets/logo.svg" alt="EcoRus logo"/>
+			<img src="assets/ecoRus.svg" alt="EcoRus logo"/>
 		</div>
 		<ul class="headLine">
 			<li *ngFor="let location of locations$">
