--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,14 +1,31 @@
 /* You can add global styles to this file, and also import other style files */
 
 @import '~ngx-toastr/toastr';
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 
 body {
 	margin: 0;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	font-family: "Inter", sans-serif;
 }
 
 code {
 	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
 	monospace;
+}
+
+html, #root, body, root, .App {
+	height: 100%;
+}
+
+@media (max-width: 1270px) {
+	.App {
+		zoom: 0.8;
+	}
+}
+@media (max-width: 1000px) {
+	.App {
+		zoom: 0.7;
+	}
 }
