Header selected page underline & not found page

--- a/src/app/components/ui/header/header.component.html
+++ b/src/app/components/ui/header/header.component.html
@@ -5,7 +5,11 @@
 		</div>
 		<ul class="headLine">
 			<li *ngFor="let location of locations$">
-				<a [href]="location.path">{{location.label}}</a>
+				<a
+					[routerLink]="location.path"
+					routerLinkActive="current"
+					[routerLinkActiveOptions]="{exact: true}"
+				>{{location.label}}</a>
 			</li>
 		</ul>
 		<ul class="dynamic">
