--- a/src/app/components/ui/slider/slider.component.html
+++ b/src/app/components/ui/slider/slider.component.html
@@ -17,7 +17,7 @@
 			<div class="content">
 				<img src="assets/trash.png" alt="Trash" />
 				<h2>А вы знали...</h2>
-				<span>что среднее время разложения пластмассовых изделий колеблется
+				<span>что среднее время разложения пластмассовых изделий колеблется<br/>
 					от 400 до 700 лет, а полиэтиленовых пакетов — от 100 до 200 лет? </span>
 				<button>Узнать больше</button>
 			</div>
@@ -26,7 +26,7 @@
 			<div class="content">
 				<img class="stickRight" src="assets/recycling.png" alt="Recycling showcase" />
 				<h2>Что с масками?</h2>
-				<span>Медицинские маски не обязательно должны становиться отходами.
+				<span>Медицинские маски не обязательно должны становиться отходами.<br/>
 					Их тоже можно сдать на переработку.</span><br/>
 				<button>Пункты сбора масок</button>
 			</div>
