--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,10 +1,7 @@
 .container {
-	padding: 35px 0 32px 0;
+	padding: 35px 30px 32px 30px;
 	margin: 0 auto 40px;
 	max-width: 1200px;
 	height: auto;
 	min-height: calc(100% - 35px - 64px - 145px);
-	@media (max-width: 750px) {
-		margin: 0 35px;
-	}
 }
