--- a/src/app/components/ui/header/header.component.scss
+++ b/src/app/components/ui/header/header.component.scss
@@ -8,17 +8,12 @@ header {
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
-	@media (max-width: 750px) {
-		margin: 0 35px;
-	}
-	@media (max-width: 625px) {
-		zoom: 0.7;
-	}
 }
 
 .container {
 	width: 1200px;
 	display: flex;
+	padding: 0 30px;
 }
 
 .headLine {
@@ -28,10 +23,18 @@ header {
 	justify-content: flex-start;
 	li {
 		padding: 15px;
-		float: right;
 		list-style-type: none;
 		font-size: 14px/18px;
 		font-weight: bold;
+	}
+}
+
+.selectors {
+	@extend .headLine;
+	@media (max-width: 970px) {
+		display: none;
+	}
+	li {
 		a {
 			//text-decoration: none;
 			letter-spacing: 1px;
@@ -61,9 +64,7 @@ header {
 	@extend .headLine;
 	align-items: end;
 	justify-content: flex-end;
-	@media (min-width: 645px) {
-		width: 100%;
-	}
+	width: 100%;
 	li {
 		display: flex;
 		align-items: center;
@@ -87,6 +88,12 @@ header {
 			b {
 				color: #2a3f81;
 			}
+		}
+	}
+	.mobile {
+		display: none;
+		@media (max-width: 970px) {
+			display: block;
 		}
 	}
 }
