Changed img to svg's & added angular-svg-icon

--- a/src/app/components/ui/footer/footer.component.html
+++ b/src/app/components/ui/footer/footer.component.html
@@ -2,11 +2,11 @@
 	<div class="container">
 		<div class="contacts">
 			<div>
-				<img src="assets/email.svg" />
+				<svg-icon src="assets/email.svg"></svg-icon>
 				<span>info@ecorus.ru</span>
 			</div>
 			<div>
-				<img src="assets/phone.svg" />
+				<svg-icon src="assets/phone.svg"></svg-icon>
 				<span>+7 (800) 880-88-88</span>
 			</div>
 		</div>
