--- a/src/app/components/ui/header/header.component.scss
+++ b/src/app/components/ui/header/header.component.scss
@@ -62,7 +62,7 @@ header {
 
 .dynamic {
 	@extend .headLine;
-	align-items: end;
+	align-items: center;
 	justify-content: flex-end;
 	width: 100%;
 	li {
