--- a/src/app/components/ui/header/header.component.html
+++ b/src/app/components/ui/header/header.component.html
@@ -16,15 +16,15 @@
 		</ul>
 		<ul class="dynamic">
 			<li>
-				<img src="assets/mapPoint.svg" />
+				<svg-icon src="assets/mapPoint.svg"></svg-icon>
 				Казань
 			</li>
 			<li>
-				<img src="assets/login.svg" />
+				<svg-icon src="assets/login.svg"></svg-icon>
 				Войти
 			</li>
 			<li class="mobile">
-				<img src="assets/menu.svg" />
+				<svg-icon src="assets/menu.svg"></svg-icon>
 			</li>
 		</ul>
 	</div>
