--- a/src/app/components/ui/header/header.component.scss
+++ b/src/app/components/ui/header/header.component.scss
@@ -14,6 +14,9 @@ header {
 	width: 1200px;
 	display: flex;
 	padding: 0 30px;
+	@media (max-width: 460px) {
+		padding: 0 0 0 15px;
+	}
 }
 
 .headLine {
@@ -27,6 +30,7 @@ header {
 		font-size: 14px/18px;
 		font-weight: bold;
 	}
+	padding-inline-start: 0;
 }
 
 .selectors {
@@ -70,16 +74,16 @@ header {
 		align-items: center;
 		color: #000B26CC;
 		fill: #000B26B8;
+		gap: 8px;
 		b {
 			color: black;
 		}
 		svg {
-			padding-right: 8px;
 			width: 24px;
 			height: 24px;
 		}
 		img {
-			padding-right: 4px;
+			padding-right: -4px;
 		}
 		&:hover {
 			color: black;
