Main page block height & container height fixes

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,5 +3,5 @@
 	margin: 0 auto 40px;
 	max-width: 1200px;
 	height: auto;
-	min-height: calc(100% - 35px - 64px - 145px);
+	min-height: calc(100% - 35px - 64px - 145px + 20px);
 }
