--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@
 
 @import '~ngx-toastr/toastr';
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+@import '../node_modules/leaflet/dist/leaflet.css';
 
 body {
 	margin: 0;
@@ -17,4 +18,8 @@ code {
 
 html, #root, body, root, .App {
 	height: 100%;
+}
+
+.leaflet-control-attribution {
+	display: none;
 }
