Added recycling points page & map markers

--- a/src/app/pages/recycling-points/recycling-points.component.html
+++ b/src/app/pages/recycling-points/recycling-points.component.html
@@ -1,1 +1,61 @@
 <app-map class="map"></app-map>
+<div class="bar">
+	<input type="text" placeholder="Поиск"/>
+	<svg-icon class="search" src="assets/search.svg"></svg-icon>
+	<select name="shops">
+		<option value="info" disabled selected>Выбрано 0 магазинов</option>
+		<option value="all">Выбрать все</option>
+		<option value="0">H&M</option>
+		<option value="1">P&B</option>
+		<option value="2">Adidas</option>
+		<option value="3">Nike</option>
+		<option value="4">Reebok</option>
+	</select>
+	<select name="materials">
+		<option value="info" disabled selected>Материалы</option>
+	</select>
+</div>
+<div class="container">
+	<div class="collections">
+		<div>
+			<img src="assets/recyclingPoint.png" alt="Recycling point" />
+			<b>ул.Кремлёвская, 88</b>
+			<span>Пластик, стекло, бумага, металл, старая одежда, батареи, аккумуляторы...</span>
+		</div>
+		<div>
+			<img src="assets/recyclingPoint.png" alt="Recycling point" />
+			<b>ул.Кремлёвская, 88</b>
+			<span>Стекло, бумага, металл, старая одежда, батареи</span>
+		</div>
+		<div>
+			<img src="assets/recyclingPoint.png" alt="Recycling point" />
+			<b>ул.Кремлёвская, 88</b>
+			<span>Пластик, стекло, бумага, металл</span>
+		</div>
+		<div>
+			<img src="assets/recyclingPoint.png" alt="Recycling point" />
+			<b>ул.Кремлёвская, 88</b>
+			<span>Стекло, бумага, металл, старая одежда, батареи</span>
+		</div>
+		<div>
+			<img src="assets/recyclingPoint.png" alt="Recycling point" />
+			<b>ул.Кремлёвская, 88</b>
+			<span>Пластик, стекло, бумага, металл, старая одежда, батареи, аккумуляторы...</span>
+		</div>
+		<div>
+			<img src="assets/recyclingPoint.png" alt="Recycling point" />
+			<b>ул.Кремлёвская, 88</b>
+			<span>Стекло, бумага, металл, старая одежда, батареи</span>
+		</div>
+		<div>
+			<img src="assets/recyclingPoint.png" alt="Recycling point" />
+			<b>ул.Кремлёвская, 88</b>
+			<span>Пластик, стекло, бумага, металл</span>
+		</div>
+		<div>
+			<img src="assets/recyclingPoint.png" alt="Recycling point" />
+			<b>ул.Кремлёвская, 88</b>
+			<span>Стекло, бумага, металл, старая одежда, батареи</span>
+		</div>
+	</div>
+</div>
