Removed map frame & made home buttons interactive

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,12 +4,16 @@
 		<img src="assets/recyclingMap.svg" alt="Recycling map" class="cover" />
 		<h1>Пункты сбора</h1>
 		<p>Посмотри, где в твоем городе можно сдать вторсырье на переработку</p>
-		<button><img src="assets/arrowRight.svg" /></button>
+		<button routerLink="/points">
+			<svg-icon src="assets/arrowRight.svg"></svg-icon>
+		</button>
 	</div>
 	<div class="block">
 		<img src="assets/ecologyMarket.svg" alt="Ecology map" class="cover" />
 		<h1>ЭкоМаркет</h1>
 		<p>Используй заработанные экокоины для покупки товаров из переработанных материалов</p>
-		<button><img src="assets/arrowRight.svg" /></button>
+		<button routerLink="/market">
+			<svg-icon src="assets/arrowRight.svg"></svg-icon>
+		</button>
 	</div>
 </div>
