--- a/src/app/pages/market/market.component.html
+++ b/src/app/pages/market/market.component.html
@@ -13,17 +13,20 @@
 			<app-checkbox-selector
 				[choices]='{"MAN": "Мужской", "WOMAN": "Женский"}'
 				[selected]="gender$"
+				id="gender"
 			></app-checkbox-selector>
 			<b>Тип товара</b>
 			<app-checkbox-selector
 				[choices]='{"CLOTHES": "Одежда", "SHOES": "Обувь", "ACCESSORIZE": "Аксессуары",
                             "FURNITURE": "Мебель", "DISHES": "Посуда"}'
 				[selected]="categories$"
+				id="categories"
 			></app-checkbox-selector>
 			<b>Брэнд</b>
 			<app-checkbox-selector
 				[choices]='{"H&M": "H&M", "P&B": "P&B", "Adidas": "Adidas", "NIKE": "Nike", "Reebok": "Reebok"}'
 				[selected]="shops$"
+				id="shops"
 			></app-checkbox-selector>
 		</div>
 		<button (click)="resetFilter()">Сбросить фильтры</button>
