Added angular sdk & created test dialog

--- a/src/app/components/ui/header/header.component.html
+++ b/src/app/components/ui/header/header.component.html
@@ -19,7 +19,7 @@
 				<svg-icon src="assets/mapPoint.svg"></svg-icon>
 				Казань
 			</li>
-			<li>
+			<li (click)="openExampleDialog()">
 				<svg-icon src="assets/login.svg"></svg-icon>
 				Войти
 			</li>
