Added sign-in modal authorization

--- a/src/app/components/modals/global.scss
+++ b/src/app/components/modals/global.scss
@@ -40,11 +40,13 @@
 	background: #3E507214;
 	color: #000B26CC;
 	margin-top: 32px;
-	&:hover {
-		background: #3E50721E;
-	}
-	&:active {
-		background: #3E507233;
+	&:enabled {
+		&:hover {
+			background: #3E50721E;
+		}
+		&:active {
+			background: #3E507233;
+		}
 	}
 }
 
