Added dynamic header change on auth state

--- a/src/app/components/ui/header/header.component.html
+++ b/src/app/components/ui/header/header.component.html
@@ -14,7 +14,7 @@
 				</a>
 			</li>
 		</ul>
-		<ul class="dynamic" *ngIf="!cache$; else authorized">
+		<ul class="dynamic" *ngIf="!(isAuthorized$ | async); else authorized">
 			<li>
 				<svg-icon src="assets/mapPoint.svg"></svg-icon>
 				Казань
