Added market promo guest preview & moved market promo to its own component

--- a/src/app/components/ui/market-items/market-items.component.html
+++ b/src/app/components/ui/market-items/market-items.component.html
@@ -1,25 +1,13 @@
-<div class="items">
-	<div class="promo">
-		<div class="convert">
-			<p>
-				<span>На вашем балансе</span>
-				<svg-icon src="assets/ecoCoin.svg"></svg-icon>
-				<b>200</b>
-			</p>
-			<span>Вы можете обменять их на скидку 200 руб.</span>
-		</div>
-		<button>Получить промокод</button>
+<app-market-promo></app-market-promo>
+<div class="item" *ngFor="let item of items$ | async">
+	<div class="cover">
+		<span>{{item.brand}}</span>
+		<img [src]="item.image_url" [alt]="item.name" />
 	</div>
-	<div class="item" *ngFor="let item of items$ | async">
-		<div class="cover">
-			<span>{{item.brand}}</span>
-			<img [src]="item.image_url" [alt]="item.name" />
-		</div>
-		<b>{{item.name}}</b>
-		<span>{{item.label}}</span>
-		<div class="price">
-			<svg-icon src="assets/ecoCoin.svg"></svg-icon>
-			{{item.price}}
-		</div>
+	<b>{{item.name}}</b>
+	<span>{{item.label}}</span>
+	<div class="price">
+		<svg-icon src="assets/ecoCoin.svg"></svg-icon>
+		{{item.price}}
 	</div>
 </div>
