Added market purchase modal & qrcode package

--- a/src/app/components/ui/market-items/market-items.component.html
+++ b/src/app/components/ui/market-items/market-items.component.html
@@ -1,5 +1,5 @@
 <app-market-promo></app-market-promo>
-<div class="item" *ngFor="let item of items$ | async">
+<div class="item" *ngFor="let item of items$ | async" (click)="openMarketPurchaseModal()">
 	<div class="cover">
 		<span>{{item.brand}}</span>
 		<img [src]="item.image_url" [alt]="item.name" />
