--- a/src/app/pages/market/market.component.html
+++ b/src/app/pages/market/market.component.html
@@ -1,9 +1,13 @@
 <div class="titleBar">
 	<h1>ЭкоМаркет</h1>
 	<div class="sortPicker">
-		<button (click)="setSort(0)" [class.active] = '(sort$ | async) === 0'>По популярности</button>
-		<button (click)="setSort(1)" [class.active] = '(sort$ | async) === 1'>По цене</button>
-		<button (click)="setSort(2)" [class.active] = '(sort$ | async) === 2'>По новизне</button>
+		<button
+			*ngFor="let label of ['По популярности', 'По цене', 'По новизне']; index as i"
+			(click)="setSort(i)"
+			[class.active] = '(sort$ | async) === i'
+		>
+			{{label}}
+		</button>
 	</div>
 </div>
 <div class="market">
