Added promocodes tab on profile page

--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -11,8 +11,6 @@
 				{{label}}
 			</p>
 		</div>
-		<div class="codes">
-
-		</div>
+		<app-profile-promocodes *ngIf="tab === 0"></app-profile-promocodes>
 	</div>
 </div>
