Added qr-code button in profile promocodes tab

--- a/src/app/components/ui/profile-promocodes/profile-promocodes.component.html
+++ b/src/app/components/ui/profile-promocodes/profile-promocodes.component.html
@@ -1,4 +1,5 @@
 <div class="item">
+	<button (click)="showQRCodeModal()">Показать qr-код</button>
 	<div class="value">1000 ₽</div>
 	<svg-icon src="assets/activeCoupon.svg"></svg-icon>
 	<div class="description">
