Added history tab on profile page

--- a/src/app/components/ui/profile-promocodes/profile-promocodes.component.html
+++ b/src/app/components/ui/profile-promocodes/profile-promocodes.component.html
@@ -27,3 +27,17 @@
 		</div>
 	</div>
 </div>
+<div class="item">
+	<div class="value">400 ₽</div>
+	<svg-icon src="assets/expiredCoupon.svg"></svg-icon>
+	<div class="description">
+		<div class="label">
+			<span>Дата создания:</span>
+			<p>25.09.2021</p>
+		</div>
+		<div class="label">
+			<span>Ссылка на товар:</span>
+			<a>adidas.com/clothes/{{code}}</a>
+		</div>
+	</div>
+</div>
