--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -12,5 +12,6 @@
 			</p>
 		</div>
 		<app-profile-promocodes *ngIf="tab === 0"></app-profile-promocodes>
+		<app-profile-history *ngIf="tab === 1"></app-profile-history>
 	</div>
 </div>
