Added sign in via sms & sign in via sms confirmation modals

--- a/src/app/components/modals/sign-in-modal/sign-in-modal.component.html
+++ b/src/app/components/modals/sign-in-modal/sign-in-modal.component.html
@@ -27,7 +27,7 @@
 		Войти
 	</button>
 	<div class="choices">
-		<a>Войти с помощью смс</a>
+		<a (click)="openSignInSMSModal()">Войти с помощью смс</a>
 		<a (click)="openRegisterModal()">Регистрация</a>
 	</div>
 	<button type="button" class="alternative">Вход для партнёров</button>
