--- a/src/app/components/modals/sign-in-sms-confirmation-modal/sign-in-sms-confirmation-modal.component.html
+++ b/src/app/components/modals/sign-in-sms-confirmation-modal/sign-in-sms-confirmation-modal.component.html
@@ -10,4 +10,10 @@
 <div class="choices">
 	<a (click)="openSignInModal()">Не получил(-а) код</a>
 </div>
-<button type="button" class="alternative">Вход для партнёров</button>
+<button
+	type="button"
+	class="alternative"
+	(click)="openPartnerSignInModal()"
+>
+	Вход для партнёров
+</button>
