--- a/src/app/components/modals/register-modal/register-modal.component.html
+++ b/src/app/components/modals/register-modal/register-modal.component.html
@@ -45,7 +45,13 @@
 	<div class="choices">
 		<a (click)="openSignInModal()">Я уже зарегистировался(-ась)</a>
 	</div>
-	<button type="button" class="alternative">Вход для партнёров</button>
+	<button
+		type="button"
+		class="alternative"
+		(click)="openPartnerSignInModal()"
+	>
+		Вход для партнёров
+	</button>
 </form>
 
 <ng-template #loader>
