--- a/src/app/components/modals/sign-in-sms-modal/sign-in-sms-modal.component.html
+++ b/src/app/components/modals/sign-in-sms-modal/sign-in-sms-modal.component.html
@@ -13,4 +13,10 @@
 <div class="choices">
 	<a (click)="openSignInModal()">Я уже зарегистировался(-ась)</a>
 </div>
-<button type="button" class="alternative">Вход для партнёров</button>
+<button
+	type="button"
+	class="alternative"
+	(click)="openPartnerSignInModal()"
+>
+	Вход для партнёров
+</button>
