--- a/src/app/components/ui/profile-promocodes/profile-promocodes.component.html
+++ b/src/app/components/ui/profile-promocodes/profile-promocodes.component.html
@@ -1,43 +1,15 @@
-<div class="item">
-	<button (click)="showQRCodeModal()">Показать qr-код</button>
-	<div class="value">1000 ₽</div>
-	<svg-icon src="assets/activeCoupon.svg"></svg-icon>
+<div class="item" *ngFor="let item of items$ | async">
+	<button *ngIf="!item.expired" (click)="showQRCodeModal()">Показать qr-код</button>
+	<div class="value">{{item.discount}} ₽</div>
+	<svg-icon [src]="item.expired ? 'assets/expiredCoupon.svg' : 'assets/activeCoupon.svg'"></svg-icon>
 	<div class="description">
 		<div class="label">
 			<span>Дата создания:</span>
-			<p>25.09.2021</p>
+			<p>{{item.date}}</p>
 		</div>
 		<div class="label">
 			<span>Ссылка на товар:</span>
-			<a>adidas.com/clothes/{{code}}</a>
-		</div>
-	</div>
-</div>
-<div class="item">
-	<div class="value">100 ₽</div>
-	<svg-icon src="assets/expiredCoupon.svg"></svg-icon>
-	<div class="description">
-		<div class="label">
-			<span>Дата создания:</span>
-			<p>25.09.2021</p>
-		</div>
-		<div class="label">
-			<span>Ссылка на товар:</span>
-			<a>adidas.com/clothes/{{code}}</a>
-		</div>
-	</div>
-</div>
-<div class="item">
-	<div class="value">400 ₽</div>
-	<svg-icon src="assets/expiredCoupon.svg"></svg-icon>
-	<div class="description">
-		<div class="label">
-			<span>Дата создания:</span>
-			<p>25.09.2021</p>
-		</div>
-		<div class="label">
-			<span>Ссылка на товар:</span>
-			<a>adidas.com/clothes/{{code}}</a>
+			<a>{{item.link}}</a>
 		</div>
 	</div>
 </div>
