Minor header style change

--- a/src/app/components/ui/header/header.component.scss
+++ b/src/app/components/ui/header/header.component.scss
@@ -25,7 +25,7 @@ header {
 .headLine {
 	display: flex;
 	flex-direction: row;
-	align-items: start;
+	align-items: flex-start;
 	justify-content: flex-start;
 	li {
 		padding: 15px;
